# bot_framework

./: Cargo.toml
botframework/: Cargo.toml
botframework-derive/: Cargo.toml  LICENSE.MD  README.md
botframework-derive/src/: lib.rs
botframework/src/: api.rs  lib.rs  telegram.rs  utils.rs
botframework/src/ai/: groq.rs  mod.rs  venice.rs
src/: infisical.rs  lib.rs  utils.rs
src/ai/: groq.rs  mod.rs  venice.rs
