[workspace]
members = ["botframework", "botframework-derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/botframework"

[workspace.dependencies]
botframework = { path = "botframework", version = "0.1.0" }
botframework-derive = { path = "botframework-derive", version = "0.1.0" }
