[package]
name = "botframework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A framework for building bots"

[dependencies]
botframework-derive = { workspace = true, optional = true }

anyhow = "1.0.102"
async-openai = {version = "0.38", features = ["chat-completion", "audio", "byot"]}
chrono = "0.4.44"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
infisical = "0.0.3"
reqwest = "0.13Add cli parsing.3"
serde = "1.0.228"
serde_json = "1.0.149"
teloxide = "0.17.0"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
v_escape = "0.19.0"
# Command line args
clap = { version = "4.6", features = ["derive"] }
[features]
default = ["derive"]
derive = ["dep:botframework-derive"]
